# inkleaf

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: package.json  tsconfig.json
backend/scripts/: create-data-key.ts  create-indexes.ts  generate-master-key.ts  seed.ts
backend/src/: config.ts  index.ts
backend/src/db/: connection.ts  encryption.ts  sqlite.ts
backend/src/middleware/: errorHandler.ts
backend/src/routes/: notes.ts  search.ts  semantic.ts  sync.ts  vault.ts
backend/src/services/: embeddings.ts  local-search.service.ts  notes.service.ts  search.service.ts  semantic.service.ts  sync.service.ts  vault.service.ts
backend/src/types/: index.ts
docs/: cross-platform-architecture.md  future-features.md  project-structure.md  save-note.md  semantic-search.md  walkthrough-save-note.md  walkthrough-semantic-search.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts
frontend/src/components/: ConfirmDialog.tsx  InkleafLogo.tsx  KeyboardShortcutsDialog.tsx  SyncStatusIndicator.tsx
frontend/src/hooks/: useImportExport.ts  useNotes.ts  useSearch.ts  useSyncStatus.ts  useVault.ts
frontend/src/lib/: fileIO.ts  markdownFile.ts
frontend/src/stores/: appStore.ts
frontend/src/styles/: globals.css
scripts/: launch-dev.sh
(+16 files in other folders)
